# FaceShapeFromShading

./: .gitmodules  CMakeLists.txt  LoGMatrix.m  OffscreenMeshVisualizer.cpp  OffscreenMeshVisualizer.h  README.md  ambient_occlusion.cpp  common.h  cost_functions.h  defs.h  explicit.cpp  faceshapefromshading.cpp  faceshapefromshading_exp.cpp  intel-compiler.cmake  ptrender.cpp  refine_mesh_with_normal.cpp  refine_mesh_with_normal_exp.cpp  settings.txt  utils.h
tests/: CMakeLists.txt  test_fbo.cpp  test_transfer_color.cpp
